# swan

./: .gitignore  LICENSE.txt  README.md  install.nsi  pyproject.toml  swan.spec
swan/: __main__.py  build.py  credits.py  installer.py  port.py
